# CherryBlossom-SakuraBoot

./: .gitignore  CMakeLists.txt  CMakePresets.json  sakura_boot.ld  startup_stm32f103xb.s
.github/workflows/: ci.yml  release.yml
Core/Inc/: main.h  stm32f1xx_hal_conf.h
Drivers/CMSIS/Device/ST/STM32F1xx/Include/: stm32f103xb.h
Drivers/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_hal_can.h  stm32f1xx_hal_rcc.h  stm32f1xx_hal_rcc_ex.h
Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal_can.c  stm32f1xx_hal_pwr.c  stm32f1xx_hal_rcc.c
can/: can_hw.c  can_hw.h  fcm32_can.c  fcm32_can.h  fcm32_can_regs.h
cmake/: gcc-arm-none-eabi.cmake
scripts/: gen_embedded_bootloader.py  gen_factory_image.py  gen_metadata.py
src/: can_admin.c  can_admin.h  can_boot.c  can_boot.h  can_helpers.c  can_helpers.h  can_protocol.h  crc16.c  crc16.h  fasthash.c  fasthash.h  flash.c  flash.h  led.c  led.h  main.c
